--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -59,7 +59,12 @@
             <div class="grid1">
                 <div class="grid-text">
                     <h2>GOAL:</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
+                    <p>My main goal was to design my personal portfolio in Figma in a way that reflects who 
+                        I am as a designer. I aimed for a layout that is clean, professional, and easy to 
+                        navigate. In addition to the portfolio itself, I also worked on developing a visual brand 
+                        for the site and began designing a mobile app to explore more interactive design 
+                        skills.
+                    </p>
                 </div>
                 <div class="grid-n-1" id="num">
                     <span>1</span>
@@ -71,13 +76,25 @@
                 </div>
                 <div class="grid-text">
                     <h2>ACTION:</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
+                    <p>I began by researching different portfolio and branding examples to understand what 
+                        makes a strong and appealing design. From there, I created wireframes and 
+                        structured the layout in Figma. I included key sections such as About Me, Projects, 
+                        and Contact, using consistent colours, fonts, and spacing that match my personal 
+                        branding. I also started working on a mobile app concept to broaden the range of 
+                        what I could include. After completing the first version, I asked for feedback from my 
+                        teacher and classmates and used it to make improvements.
+                    </p>
                 </div>
             </div>
             <div class="grid3">
                 <div class="grid-text">
-                    <h2>IMPROVEMENTS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
+                    <h2>IMPROVEMENTSP:</h2>
+                    <p>Based on feedback, I made several improvements to both the desktop and mobile 
+                        versions of my designs. I improved the alignment and spacing to make the layout 
+                        cleaner and more balanced. I increased the colour contrast for better readability and 
+                        ensured that the design was responsive on smaller screens. I also made the 
+                        navigation bar fixed at the top, which improved the overall user experience.
+                    </p>
                 </div>
                 <div class="grid-n-3" id="num">
                     <span>3</span>
@@ -89,7 +106,12 @@
                 </div>
                 <div class="grid-text">
                     <h2>REFLECTION:</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
+                    <p>This project helped me understand that good design is about more than just how 
+                        something looks — it’s also about how it works for the user. I’ve developed more 
+                        confidence in using Figma, especially when it comes to layout structure, visual 
+                        hierarchy, and branding. The feedback I received helped me catch details I 
+                        overlooked and made the outcome stronger.
+                    </p>
                 </div>
             </div>
         </div>
@@ -98,36 +120,10 @@
     <section class="WHAT-I-LEARNED">
         <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
+            I learned how to take an idea from concept to a fully developed digital design. My 
+            skills in using Figma improved a lot, especially in planning layouts, creating consistent 
+            branding, and designing for both desktop and mobile. I also got better at thinking 
+            from a user’s perspective and making decisions based on usability.
         </p>
         <div class="image22"></div>
     </section>
@@ -135,41 +131,31 @@
     <section class="WHAT-I-LEARNED why">
         <h2>WHY IT MATTERS TO ME:</h2>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
-            dolores quis dolorum cupiditate odit! Quia impedit consequatur
-            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
-            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
-            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
-            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
-            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
-            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
-            fugit? Atque!
+            This project is important because it represents something real that I’ll use going 
+            forward. It’s the first time I’ve combined portfolio design, branding, and mobile 
+            interface work into one complete project. It shows how much I’ve grown and what 
+            I’m capable of creating on my own.
         </p>
     </section>
 
     <section class="feedback">
+        <h2>FEEDBACK:</h2>
+        <div class="images-flex">
+            <div class="main-image">
+                <img src="img/slider 1.1.png" name="main" alt="image" width="1200px" height="600px">
+            </div>
+            <div class="flex-image">
+                <img onclick="main.src = this.src" src="img/slider 1.1.png" alt="image 1" width="100px" height="100px">
+                <img onclick="main.src = this.src" src="img/slider 1.2.png" alt="image 2" width="100px" height="100px">
+                <img onclick="main.src = this.src" src="img/slider 1.3.png" alt="image 3" width="100px" height="100px">
+                <img onclick="main.src = this.src" src="img/slider 1.4.png" alt="image 4" width="100px" height="100px">
+            </div>
+        </div>
+    </section>
+
+    <section class="result">
         
     </section>
 </body>
 </html>
+
