--- a/Branding.html
+++ b/Branding.html
@@ -25,9 +25,9 @@
                 <li><a class="btnn" href="About.html">About</i></a></li>
                 <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
-                    <a class="btnn" ="Projects.html" id="active">Projects <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" href="Projects.html" id="active">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="Branding.html" id="active">Branding</a></li>
+                        <li><a id="active" href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
@@ -36,11 +36,11 @@
                 <li class="menu">
                     <a class="btnn" href="Learning Outcomes.html">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu" id="submenu0">
-                        <li><a href="#">LO1: Interactive Media Products</a></li>
-                        <li><a href="#">LO2: Iterative Design</a></li>
-                        <li><a href="#">LO3: Development & version control</a></li>
-                        <li><a href="#">LO4: Professional Standard</a></li>
-                        <li><a href="#">LO5: Personal Leadership</a></li>
+                        <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
+                        <li><a href="Iterative-Design.html">LO2: Iterative Design</a></li>
+                        <li><a href="Development&version-control.html">LO3: Development & version control</a></li>
+                        <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
+                        <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
                     </ul>
                 </li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
