--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -31,6 +31,7 @@
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
+                        <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
