--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -29,6 +29,7 @@
                         <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
+                        <li><a href="#">development project</a></li>
                         <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
