--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -36,7 +36,7 @@
                 <li class="menu">
                     <a class="btnn" href="Learning Outcomes.html" id="active">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu" id="submenu0">
-                        <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
+                        <li><a id="active"  href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
                         <li><a href="Iterative-Design.html">LO2: Iterative Design</a></li>
                         <li><a href="Development&version-control.html">LO3: Development & version control</a></li>
                         <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
@@ -142,7 +142,7 @@
         <h2>FEEDBACK:</h2>
         <div class="images-flex">
             <div class="main-image">
-                <img src="img/slider 1.1.png" name="main" alt="image" width="1200px" height="600px">
+                <img src="img/slider 1.1.png" name="main" alt="image" width="100%" height="600px" style="object-fit: cover; min-height: 200px; min-width: 200px; max-width: 1200px;">
             </div>
             <div class="flex-image">
                 <img onclick="main.src = this.src" src="img/slider 1.1.png" alt="image 1" width="100px" height="100px">
@@ -154,7 +154,20 @@
     </section>
 
     <section class="result">
-        
+        <h2>RESULT:</h2>
+        <div class="images-flex1">
+            <div class="main-image">
+                <img src="img/slider 1.1.png" name="main1" alt="image" width="100%" height="600px" style="object-fit: cover; min-height: 200px; min-width: 200px; max-width: 1200px;">
+            </div>
+            <div class="flex-image1">
+                <img onclick="main1.src = this.src" src="img/slider 1.1.png" alt="image 1" width="100px" height="100px">
+                <img onclick="main1.src = this.src" src="img/slider 1.2.png" alt="image 2" width="100px" height="100px">
+                <img onclick="main1.src = this.src" src="img/slider 1.3.png" alt="image 3" width="100px" height="100px">
+                <img onclick="main1.src = this.src" src="img/slider 1.4.png" alt="image 4" width="100px" height="100px">
+                <img onclick="main1.src = this.src" src="img/slider 1.4.png" alt="image 5" width="100px" height="100px">
+                <img onclick="main1.src = this.src" src="img/slider 1.4.png" alt="image 6" width="100px" height="100px">
+            </div>
+        </div>
     </section>
 </body>
 </html>
