--- a/Aigeneration.html
+++ b/Aigeneration.html
@@ -26,22 +26,23 @@
                 <li><a class="btnn" href="About.html">About</i></a></li>
                 <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
-                    <a class="btnn" ="Projects.html" id="active">Projects <i class="fa-solid fa-caret-down"></i></a>
-                    <ul class="submenu">
-                        <li><a href="Branding.html" id="active">Branding</a></li>
-                        <li><a href="#">create that UX</a></li>
-                        <li><a href="#">personal project</a></li>
-                        <li><a href="#">development project</a></li>
+                    <button class="btnn" id="btnproject" herf="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></button>
+                    <ul class="submenu hidden" id ="submenu">
+                        <li><a href="Branding.html">Branding</a></li>
+                        <li><a href="create-that-UX.html">create that UX</a></li>
+                        <li><a href="personal-project.html">personal project</a></li>
+                        <li><a href="development-project.html">development project</a></li>
+                        <li><a id="active" href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
-                    <a class="btnn" href="Learning Outcomes.html">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
-                    <ul class="submenu" id="submenu0">
-                        <li><a href="#">LO1: Interactive Media Products</a></li>
-                        <li><a href="#">LO2: Iterative Design</a></li>
-                        <li><a href="#">LO3: Development & version control</a></li>
-                        <li><a href="#">LO4: Professional Standard</a></li>
-                        <li><a href="#">LO5: Personal Leadership</a></li>
+                    <button class="btnn" id="btnlearning">Learning Outcomes <i class="fa-solid fa-caret-down"></i></button>
+                    <ul class="submenu submenu0 hidden" id="submenu1">
+                        <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
+                        <li><a href="Development&version-control.html">LO2: Development & version control</a></li>
+                        <li><a href="Iterative-Design.html">LO3: Iterative Design</a></li>
+                        <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
+                        <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
                     </ul>
                 </li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
@@ -95,6 +96,8 @@
           <p><strong>Man-Made</strong><br>Made without GenAI<br>This product was created without any generative AI.</p>
         </div>
       </section>
-      
+
+    <script src="app.js"></script>
+</body>
 
 
