--- a/About.html
+++ b/About.html
@@ -16,61 +16,61 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header>
-        <div class="main-head">
-            <input type='checkbox' id='check' />
-            <ul class="head">
-                <li><a class="btnn" href="index.html">Home</a></li>
-                <li><a class="btnn" href="About.html" id="active">About</i></a></li>
-                <li><a class="btnn" href="Resume.html">Resume</a></li>
-                <li class="menu">
-                    <button class="btnn" id="btnproject" herf="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></button>
-                    <ul class="submenu hidden" id ="submenu">
-                        <li><a href="Branding.html">Branding</a></li>
-                        <li><a href="create-that-UX.html">create that UX</a></li>
-                        <li><a href="personal-project.html">personal project</a></li>
-                        <li><a href="development-project.html">development project</a></li>
-                        <li><a href="Aigeneration.html">AI generation</a></li>
-                    </ul>
-                </li>
-                <li class="menu">
-                    <button class="btnn" id="btnlearning">Learning Outcomes <i class="fa-solid fa-caret-down"></i></button>
-                    <ul class="submenu submenu0 hidden" id="submenu1">
-                        <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
-                        <li><a href="Development&version-control.html">LO2: Development & version control</a></li>
-                        <li><a href="Iterative-Design.html">LO3: Iterative Design</a></li>
-                        <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
-                        <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
-                    </ul>
-                </li>
-                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
-            </ul>
-            <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
-        </div>
-    </header>
+        <header>
+            <div class="main-head">
+                <input type='checkbox' id='check' />
+                <ul class="head">
+                    <li><a class="btnn" href="index.html">Home</a></li>
+                    <li><a class="btnn" href="About.html" id="active">About</i></a></li>
+                    <li><a class="btnn" href="Resume.html">Resume</a></li>
+                    <li class="menu">
+                        <button class="btnn" id="btnproject" herf="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></button>
+                        <ul class="submenu hidden" id ="submenu">
+                            <li><a href="Branding.html">Branding</a></li>
+                            <li><a href="create-that-UX.html">create that UX</a></li>
+                            <li><a href="personal-project.html">personal project</a></li>
+                            <li><a href="development-project.html">development project</a></li>
+                            <li><a href="Aigeneration.html">AI generation</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu">
+                        <button class="btnn" id="btnlearning">Learning Outcomes <i class="fa-solid fa-caret-down"></i></button>
+                        <ul class="submenu submenu0 hidden" id="submenu1">
+                            <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
+                            <li><a href="Development&version-control.html">LO2: Development & version control</a></li>
+                            <li><a href="Iterative-Design.html">LO3: Iterative Design</a></li>
+                            <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
+                            <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
+                        </ul>
+                    </li>
+                    <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
+                </ul>
+                <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
+            </div>
+        </header>
 
-    <section class="about">
-        <div class="main-about">
-            <h1>About</h1>
-            <p></p>
-        </div>
+        <section class="about">
+            <div class="main-about">
+                <h1>About</h1>
+                <p></p>
+            </div>
 
-        <div class="story">
-            <p>I'm a passionate web developer with a strong design background, skilled in tools like Figma, Photoshop, Blender, and Canva. I create visually appealing, user-friendly websites and stay updated with the latest tech and design trends. I see coding as a creative way to bring ideas to life and continuously seek opportunities to grow and innovate in the digital space.</p>
-        </div>
+            <div class="story">
+                <p>I'm a passionate web developer with a strong design background, skilled in tools like Figma, Photoshop, Blender, and Canva. I create visually appealing, user-friendly websites and stay updated with the latest tech and design trends. I see coding as a creative way to bring ideas to life and continuously seek opportunities to grow and innovate in the digital space.</p>
+            </div>
 
-        <div class="social-media">
-            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/karimmassaoudd?igsh=MnRseWt5d3JuZDh0" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://github.com/karimmassaoudd" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="tel:+0616537940"><i class="fa-solid fa-phone"></i></a>
-        </div>
-    </section>
+            <div class="social-media">
+                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank" rel="noopener" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/karimmassaoudd?igsh=MnRseWt5d3JuZDh0" target="_blank" rel="noopener" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank" rel="noopener" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a title="Github" href="https://github.com/karimmassaoudd" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a>
+                <a href="tel:+0616537940" title="Phone"><i class="fa-solid fa-phone"></i></a>
+            </div>
+        </section>
 
-    <div class="pic">
-        <img src="img/Picture of me.png" alt="image">
-    </div>
+        <div class="pic">
+            <img src="img/Picture of me.png" alt="image">
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
