--- a/Iterative-Design.html
+++ b/Iterative-Design.html
@@ -59,12 +59,15 @@
             <div class="grid1">
                 <div class="grid-text">
                     <h2>GOAL:</h2>
-                    <p>My main goal was to design my personal portfolio in Figma in a way that reflects who 
-                        I am as a designer. I aimed for a layout that is clean, professional, and easy to 
+                    <p>
+                        My main goal was to design my 
+                        <a href="link-to-your-image.jpg" target="_blank">personal portfolio in Figma</a> 
+                        in a way that reflects who I am as a designer. I aimed for a layout that is clean, professional, and easy to 
                         navigate. In addition to the portfolio itself, I also worked on developing a visual brand 
                         for the site and began designing a mobile app to explore more interactive design 
                         skills.
-                    </p>
+                      </p>
+                      
                 </div>
                 <div class="grid-n-1" id="num">
                     <span>1</span>
