--- a/Resume.html
+++ b/Resume.html
@@ -328,7 +328,7 @@
                     <p>Design logos for brands or startups.</p>    
                 </div>
 
-                <a href="Project.html" class="btn">look at my work <i class="fa-solid fa-caret-right"></i></a>
+                <a href="Projects.html" class="btn">look at my work <i class="fa-solid fa-caret-right"></i></a>
             </div>
 
             <!--hobbies section-->
