img fix branding

--- a/Branding.html
+++ b/Branding.html
@@ -122,23 +122,23 @@
                     A content strategy to help him grow his fanbase organically    
                     All elements reflect Owen’s essence as a free-spirited, optimistic dreamer.
                 </p>
+                <!-- Gallery 2 -->
                 <div class="pop-img">
                     <div class="imageSliderContainer">
-                        <div class="sliderBox" onclick="openPopup(0)"><img src="img/project 1.png" alt="Image 1"></div>
-                        <div class="sliderBox" onclick="openPopup(1)"><img src="img/project pic 2.png" alt="Image 2"></div>
-                        <div class="sliderBox" onclick="openPopup(2)"><img src="img/project pic 3.png" alt="Image 3"></div>
+                        <div class="sliderBox" onclick="openPopupGallery2(0)"><img src="img/project 1.png" alt="Image 1"></div>
+                        <div class="sliderBox" onclick="openPopupGallery2(1)"><img src="img/project pic 2.png" alt="Image 2"></div>
+                        <div class="sliderBox" onclick="openPopupGallery2(2)"><img src="img/project pic 3.png" alt="Image 3"></div>
                     </div>
-                
                     <div class="popupOverlay" id="imagePopup">
                         <div class="popupContent">
-                            <a class="closeButton" onclick="closePopup()">×</a>
+                            <a class="closeButton" onclick="closePopupGallery2()">×</a>
                             <div class="popupImageSlider">
                                 <img class="popupImage" src="img/project 1.png" alt="Image 1">
                                 <img class="popupImage" src="img/project pic 2.png" alt="Image 2">
                                 <img class="popupImage" src="img/project pic 3.png" alt="Image 3">
                             </div>
-                            <a class="prevArrow" onclick="changeSlide(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
-                            <a class="nextArrow" onclick="changeSlide(1)"><i class="fa-solid fa-square-caret-right"></i></a>
+                            <a class="prevArrow" onclick="changeSlideGallery2(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
+                            <a class="nextArrow" onclick="changeSlideGallery2(1)"><i class="fa-solid fa-square-caret-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -193,19 +193,18 @@
                 </p>
                 <div class="pop-img">
                     <div class="imageSliderContainer">
-                        <div class="sliderBox" onclick="openPopup(0)"><img src="img/Feedback project 1.png" alt="Image 1"></div>
-                        <div class="sliderBox" onclick="openPopup(1)"><img src="img/Feedback project 2.png" alt="Image 2"></div>
+                        <div class="sliderBox" onclick="openPopupGallery1(0)"><img src="img/Feedback project 1.png" alt="Image 1"></div>
+                        <div class="sliderBox" onclick="openPopupGallery1(1)"><img src="img/Feedback project 2.png" alt="Image 2"></div>
                     </div>
-                
-                <div class="popupOverlay" id="imagePopup">
+                    <div class="popupOverlay" id="imagePopup1">
                         <div class="popupContent">
-                            <a class="closeButton" onclick="closePopup()">×</a>
+                            <a class="closeButton" onclick="closePopupGallery1()">×</a>
                             <div class="popupImageSlider">
                                 <img class="popupImage" src="img/Feedback project 1.png" alt="Image 1">
                                 <img class="popupImage" src="img/Feedback project 2.png" alt="Image 2">
                             </div>
-                            <a class="prevArrow" onclick="changeSlide(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
-                            <a class="nextArrow" onclick="changeSlide(1)"><i class="fa-solid fa-square-caret-right"></i></a>
+                            <a class="prevArrow" onclick="changeSlideGallery1(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
+                            <a class="nextArrow" onclick="changeSlideGallery1(1)"><i class="fa-solid fa-square-caret-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -248,7 +247,7 @@
                     This research helped us craft a brand that is relatable, expressive, and built to grow.
                 </p>
                 <div class="btn">
-                    <a class="btnn-1" href="#">More Detdetails <i class="fa-solid fa-caret-right"></i></i></a>
+                    <a class="btnn-1" target="_blank" href="https://docs.google.com/document/d/1_4uzUI9vzXkdWipuRBGajfV6E4KWPnf-4Ow1nH37-ow/edit?tab=t.jn19ji4wj7pi#heading=h.joid4s7hq0ks">PDF Owen Bryce <i class="fa-solid fa-caret-right"></i></i></a>
                 </div>
             </div>
         </div>
