--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -60,13 +60,14 @@
             <div class="grid1">
                 <div class="grid-text">
                     <h2>GOAL:</h2>
-                    <p>My main goal was to design my personal portfolio in Figma in a way that reflects who I am as a designer.
+                    <p>My main goal was to design my personal portfolio in <a style="color: #008080;" title="Watch The Design In Figma" target="_blank" href="https://www.figma.com/design/m2MQXuBjegGLu1zSw1ikRN/Karim-Massaoud-Portifolio?node-id=0-1&p=f&t=TS3ZM34aGA5Rwsrj-0">Figma</a> in a way that reflects who I am as a designer.
                     I aimed for a layout that is clean, professional, and easy to navigate, with a strong focus on visual hierarchy and user-friendly interaction. 
                     I wanted each section to clearly represent my personality, creativity, and the skills I’ve developed throughout my journey. 
                     In addition to the portfolio itself, I also worked on developing a visual brand for the site, including 
                     a consistent color scheme, logo, and typography that aligns with my design identity. 
                     I also began designing a mobile app as part of the project to explore more interactive design skills and to ensure
                     my designs adapt across different platforms.
+                    <a style="color: #008080;" href="#">View Result <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </p>
                 </div>
                 <div class="grid-n-1" id="num">
@@ -254,8 +255,10 @@
             <p>&copy; 2025 Karim Massaoud. All Rights Reserved.</p>
         </div>
     </footer>
+    <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
     
     <script src="app.js"></script>
+    <script src="btn.scroll.js"></script>
 </body>
 </html>
 
