--- a/Development&version-control.html
+++ b/Development&version-control.html
@@ -207,15 +207,15 @@
     </section>
 
     <div class="footer-nav-buttons">
-        <a href="Learning Outcomes.html" class="footer-btn"><i class="fa-solid fa-arrow-left"></i> Previous</a>
-        <a href="Development&version-control.html" class="footer-btn">Next <i class="fa-solid fa-arrow-right"></i></a>
+        <a href="Interactive-Media-Products.html" class="footer-btn"><i class="fa-solid fa-arrow-left"></i> Previous</a>
+        <a href="Iterative-Design.html" class="footer-btn">Next <i class="fa-solid fa-arrow-right"></i></a>
     </div>
 
     <div class="page-number">
         <div class="pagination-visual">
-            <a href="Learning Outcomes.html" class="page-dot active">1</a>
+            <a href="Learning Outcomes.html" class="page-dot">1</a>
             <a href="Interactive-Media-Products.html" class="page-dot">2</a>
-            <a href="Development&version-control.html" class="page-dot">3</a>
+            <a href="Development&version-control.html" class="page-dot active">3</a>
             <a href="Iterative-Design.html" class="page-dot">4</a>
             <a href="Professional-Standard.html" class="page-dot">5</a>
             <a href="Personal-Leadership.html" class="page-dot">6</a>  
