--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -204,8 +204,8 @@
 
     <div class="page-number">
         <div class="pagination-visual">
-            <a href="Learning Outcomes.html" class="page-dot active">1</a>
-            <a href="Interactive-Media-Products.html" class="page-dot">2</a>
+            <a href="Learning Outcomes.html" class="page-dot">1</a>
+            <a href="Interactive-Media-Products.html" class="page-dot active">2</a>
             <a href="Development&version-control.html" class="page-dot">3</a>
             <a href="Iterative-Design.html" class="page-dot">4</a>
             <a href="Professional-Standard.html" class="page-dot">5</a>
