--- a/Branding.html
+++ b/Branding.html
@@ -329,9 +329,11 @@
             <p>&copy; 2025 Karim Massaoud. All Rights Reserved.</p>
         </div>
     </footer>
+    <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
 
     <script src="pop-up-image.js"></script>
     <script src="script.js"></script>
     <script src="app.js"></script>
+    <script src="btn.scroll.js"></script>
 </body>
 </html>
