--- a/Personal-Leadership.html
+++ b/Personal-Leadership.html
@@ -169,7 +169,9 @@
             </div>
         </div>
     </section>
+    <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
 
+    <script src="btn.scroll.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
