--- a/Development&version-control.html
+++ b/Development&version-control.html
@@ -263,7 +263,9 @@
             <p>&copy; 2025 Karim Massaoud. All Rights Reserved.</p>
         </div>
     </footer>
+    <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
 
+    <script src="btn.scroll.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
