--- a/Iterative-Design.html
+++ b/Iterative-Design.html
@@ -172,7 +172,9 @@
             </div>
         </div>
     </section>
+    <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
 
+    <script src="btn.scroll.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
