color  change in lo1 to lo5

--- a/Development&version-control.html
+++ b/Development&version-control.html
@@ -123,7 +123,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED">
-        <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
+        <h2>WHAT I LEARNED <span class="gradient">THROUGH THIS PROCESS:</span></h2>
         <p>
             I learned how to build a complete, real-world website using HTML, CSS, and JavaScriptstarting from a blank page and turning it into a working portfolio.
             I now know how to structure my code properly, use semantic HTML for better accessibility, apply CSS for styling and layout, and add interactivity 
@@ -141,7 +141,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED why">
-        <h2>WHY IT MATTERS TO ME:</h2>
+        <h2>WHY IT MATTERS <span class="gradient">TO ME:</span></h2>
         <p>
             This project matters to me because it shows how far I’ve come. When I started, I had almost no experience with JavaScript and wasn’t sure if 
             I could build a working site on my own. But through practice, completing bootcamp assignments, and applying feedback, I created something real, 
