--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -130,7 +130,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED">
-        <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
+        <h2>WHAT I LEARNED <span class="gradient">THROUGH THIS PROCESS:</span></h2>
         <p>
             I learned how to take an idea and turn it into a full digital design, step by step. 
             I got much better at using Figma especially when it comes to planning layouts, keeping my design consistent, 
@@ -146,7 +146,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED why">
-        <h2>WHY IT MATTERS TO ME:</h2>
+        <h2>WHY IT MATTERS <span class="gradient">TO ME:</span></h2>
         <p>
             This project matters to me because it’s something real that I can actually use to show who I am as a designer.
             It’s the first time I’ve put together everything I’ve learned designing a portfolio, building a brand, and making something that works on both computer and phone screens.
