--- a/Personal-Leadership.html
+++ b/Personal-Leadership.html
@@ -121,7 +121,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED">
-        <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
+        <h2>WHAT I LEARNED <span class="gradient">THROUGH THIS PROCESS:</span></h2>
         <p>
             I learned that personal leadership is not just about leading a team it’s also about how you lead yourself throughout a project. I learned how important 
             it is to stay focused, responsible, and consistent in everything I do, even when things become challenging. I practiced showing up with a professional 
@@ -141,7 +141,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED why">
-        <h2>WHY IT MATTERS TO ME:</h2>
+        <h2>WHY IT MATTERS <span class="gradient">TO ME:</span></h2>
         <p>
             This project matters to me because it showed me who I am when I work under pressure, in a team, and on something that truly matters. It helped me realize 
             that being a good designer isn’t just about talent it’s about being responsible, curious, focused, and professional in every part of the process.
