--- a/Professional-Standard.html
+++ b/Professional-Standard.html
@@ -118,7 +118,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED">
-        <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
+        <h2>WHAT I LEARNED <span class="gradient">THROUGH THIS PROCESS:</span></h2>
         <p>
             WHAT I LEARNED THROUGH THIS PROCESS
             I learned how to approach a design project in a way that reflects real industry standards. This meant starting with a solid project plan, clearly defining 
@@ -136,7 +136,7 @@
     </section>
 
     <section class="WHAT-I-LEARNED why">
-        <h2>WHY IT MATTERS TO ME:</h2>
+        <h2>WHY IT MATTERS <span class="gradient">TO ME:</span></h2>
         <p>
             This project matters to me because it gave me my first real experience of working like a professional designer not just someone creating designs on 
             their own, but someone working in a team, communicating with others, and making decisions based on actual user needs. It showed me that professional 
